tests/snapshots/lexer_snapshots__lexer_all@tokens-135.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/validator/p2_bound_must_be_interface.of
---
Ok(
    [
        Token {
            token_type: Struct,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Bar",
            ),
            position: 10,
            line: 1,
            column: 11,
        },
        Token {
            token_type: LeftBrace,
            position: 12,
            line: 1,
            column: 13,
        },
        Token {
            token_type: RightBrace,
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: Struct,
            position: 20,
            line: 2,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Foo",
            ),
            position: 24,
            line: 2,
            column: 11,
        },
        Token {
            token_type: LT,
            position: 25,
            line: 2,
            column: 12,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 26,
            line: 2,
            column: 13,
        },
        Token {
            token_type: Colon,
            position: 27,
            line: 2,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "Bar",
            ),
            position: 31,
            line: 2,
            column: 18,
        },
        Token {
            token_type: GT,
            position: 32,
            line: 2,
            column: 19,
        },
        Token {
            token_type: LeftBrace,
            position: 34,
            line: 2,
            column: 21,
        },
        Token {
            token_type: RightBrace,
            position: 35,
            line: 2,
            column: 22,
        },
    ],
)
