tests/snapshots/lexer_snapshots__lexer_all@tokens-137.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/validator/p2_method_minted_with_owner.of
---
Ok(
    [
        Token {
            token_type: Struct,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "S",
            ),
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: LeftBrace,
            position: 10,
            line: 1,
            column: 11,
        },
        Token {
            token_type: Function,
            position: 19,
            line: 1,
            column: 20,
        },
        Token {
            token_type: Identifier(
                "m",
            ),
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: LeftParen,
            position: 22,
            line: 1,
            column: 23,
        },
        Token {
            token_type: RightParen,
            position: 23,
            line: 1,
            column: 24,
        },
        Token {
            token_type: LeftBrace,
            position: 25,
            line: 1,
            column: 26,
        },
        Token {
            token_type: RightBrace,
            position: 26,
            line: 1,
            column: 27,
        },
        Token {
            token_type: RightBrace,
            position: 28,
            line: 1,
            column: 29,
        },
    ],
)
