tests/snapshots/lexer_snapshots__lexer_all@tokens-139.snap
---
source: tests/lexer_snapshots.rs
assertion_line: 13
expression: tokens
input_file: examples/validator/p2_bound_referencing_interface_ok.of
---
Ok(
    [
        Token {
            token_type: Interface,
            position: 9,
            line: 1,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "Show",
            ),
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: LeftBrace,
            position: 16,
            line: 1,
            column: 17,
        },
        Token {
            token_type: RightBrace,
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: Struct,
            position: 24,
            line: 2,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Foo",
            ),
            position: 28,
            line: 2,
            column: 11,
        },
        Token {
            token_type: LT,
            position: 29,
            line: 2,
            column: 12,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 30,
            line: 2,
            column: 13,
        },
        Token {
            token_type: Colon,
            position: 31,
            line: 2,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "Show",
            ),
            position: 36,
            line: 2,
            column: 19,
        },
        Token {
            token_type: GT,
            position: 37,
            line: 2,
            column: 20,
        },
        Token {
            token_type: LeftBrace,
            position: 39,
            line: 2,
            column: 22,
        },
        Token {
            token_type: RightBrace,
            position: 40,
            line: 2,
            column: 23,
        },
    ],
)
