tests/snapshots/lexer_snapshots__lexer_all@tokens-14.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/language/14_iterators.of
---
Ok(
    [
        Token {
            token_type: Import,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: LeftBrace,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: RightBrace,
            position: 16,
            line: 1,
            column: 17,
        },
        Token {
            token_type: From,
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: StringLit(
                "of:core",
            ),
            position: 31,
            line: 1,
            column: 32,
        },
        Token {
            token_type: Semicolon,
            position: 32,
            line: 1,
            column: 33,
        },
        Token {
            token_type: Struct,
            position: 201,
            line: 7,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Range",
            ),
            position: 207,
            line: 7,
            column: 13,
        },
        Token {
            token_type: Colon,
            position: 208,
            line: 7,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "Iterator",
            ),
            position: 217,
            line: 7,
            column: 23,
        },
        Token {
            token_type: LT,
            position: 218,
            line: 7,
            column: 24,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 221,
            line: 7,
            column: 27,
        },
        Token {
            token_type: GT,
            position: 222,
            line: 7,
            column: 28,
        },
        Token {
            token_type: LeftBrace,
            position: 224,
            line: 7,
            column: 30,
        },
        Token {
            token_type: Identifier(
                "current",
            ),
            position: 234,
            line: 8,
            column: 10,
        },
        Token {
            token_type: Colon,
            position: 235,
            line: 8,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 239,
            line: 8,
            column: 15,
        },
        Token {
            token_type: Comma,
            position: 240,
            line: 8,
            column: 16,
        },
        Token {
            token_type: Identifier(
                "end",
            ),
            position: 246,
            line: 9,
            column: 6,
        },
        Token {
            token_type: Colon,
            position: 247,
            line: 9,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 255,
            line: 9,
            column: 15,
        },
        Token {
            token_type: Comma,
            position: 256,
            line: 9,
            column: 16,
        },
        Token {
            token_type: Function,
            position: 268,
            line: 11,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "next",
            ),
            position: 273,
            line: 11,
            column: 16,
        },
        Token {
            token_type: LeftParen,
            position: 274,
            line: 11,
            column: 17,
        },
        Token {
            token_type: SelfRef,
            position: 278,
            line: 11,
            column: 21,
        },
        Token {
            token_type: RightParen,
            position: 279,
            line: 11,
            column: 22,
        },
        Token {
            token_type: Colon,
            position: 280,
            line: 11,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 284,
            line: 11,
            column: 27,
        },
        Token {
            token_type: Pipe,
            position: 286,
            line: 11,
            column: 29,
        },
        Token {
            token_type: Null,
            position: 291,
            line: 11,
            column: 34,
        },
        Token {
            token_type: LeftBrace,
            position: 293,
            line: 11,
            column: 36,
        },
        Token {
            token_type: If,
            position: 300,
            line: 12,
            column: 7,
        },
        Token {
            token_type: LeftParen,
            position: 302,
            line: 12,
            column: 9,
        },
        Token {
            token_type: SelfRef,
            position: 306,
            line: 12,
            column: 13,
        },
        Token {
            token_type: Dot,
            position: 307,
            line: 12,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "current",
            ),
            position: 314,
            line: 12,
            column: 21,
        },
        Token {
            token_type: GtEq,
            position: 317,
            line: 12,
            column: 24,
        },
        Token {
            token_type: SelfRef,
            position: 322,
            line: 12,
            column: 29,
        },
        Token {
            token_type: Dot,
            position: 323,
            line: 12,
            column: 30,
        },
        Token {
            token_type: Identifier(
                "end",
            ),
            position: 326,
            line: 12,
            column: 33,
        },
        Token {
            token_type: RightParen,
            position: 327,
            line: 12,
            column: 34,
        },
        Token {
            token_type: LeftBrace,
            position: 329,
            line: 12,
            column: 36,
        },
        Token {
            token_type: Null,
            position: 340,
            line: 13,
            column: 11,
        },
        Token {
            token_type: RightBrace,
            position: 346,
            line: 14,
            column: 6,
        },
        Token {
            token_type: Else,
            position: 351,
            line: 14,
            column: 11,
        },
        Token {
            token_type: LeftBrace,
            position: 353,
            line: 14,
            column: 13,
        },
        Token {
            token_type: Var,
            position: 363,
            line: 15,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "v",
            ),
            position: 365,
            line: 15,
            column: 12,
        },
        Token {
            token_type: Eq,
            position: 367,
            line: 15,
            column: 14,
        },
        Token {
            token_type: SelfRef,
            position: 372,
            line: 15,
            column: 19,
        },
        Token {
            token_type: Dot,
            position: 373,
            line: 15,
            column: 20,
        },
        Token {
            token_type: Identifier(
                "current",
            ),
            position: 380,
            line: 15,
            column: 27,
        },
        Token {
            token_type: Semicolon,
            position: 381,
            line: 15,
            column: 28,
        },
        Token {
            token_type: SelfRef,
            position: 392,
            line: 16,
            column: 11,
        },
        Token {
            token_type: Dot,
            position: 393,
            line: 16,
            column: 12,
        },
        Token {
            token_type: Identifier(
                "current",
            ),
            position: 400,
            line: 16,
            column: 19,
        },
        Token {
            token_type: Eq,
            position: 402,
            line: 16,
            column: 21,
        },
        Token {
            token_type: SelfRef,
            position: 407,
            line: 16,
            column: 26,
        },
        Token {
            token_type: Dot,
            position: 408,
            line: 16,
            column: 27,
        },
        Token {
            token_type: Identifier(
                "current",
            ),
            position: 415,
            line: 16,
            column: 34,
        },
        Token {
            token_type: Plus,
            position: 417,
            line: 16,
            column: 36,
        },
        Token {
            token_type: Int(
                "1",
            ),
            position: 419,
            line: 16,
            column: 38,
        },
        Token {
            token_type: Semicolon,
            position: 420,
            line: 16,
            column: 39,
        },
        Token {
            token_type: Identifier(
                "v",
            ),
            position: 428,
            line: 17,
            column: 8,
        },
        Token {
            token_type: RightBrace,
            position: 434,
            line: 18,
            column: 6,
        },
        Token {
            token_type: RightBrace,
            position: 438,
            line: 19,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 440,
            line: 20,
            column: 2,
        },
        Token {
            token_type: Function,
            position: 450,
            line: 22,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "print_all",
            ),
            position: 460,
            line: 22,
            column: 19,
        },
        Token {
            token_type: LT,
            position: 461,
            line: 22,
            column: 20,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 462,
            line: 22,
            column: 21,
        },
        Token {
            token_type: GT,
            position: 463,
            line: 22,
            column: 22,
        },
        Token {
            token_type: LeftParen,
            position: 464,
            line: 22,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "iter",
            ),
            position: 468,
            line: 22,
            column: 27,
        },
        Token {
            token_type: Colon,
            position: 469,
            line: 22,
            column: 28,
        },
        Token {
            token_type: Identifier(
                "Iterator",
            ),
            position: 478,
            line: 22,
            column: 37,
        },
        Token {
            token_type: LT,
            position: 479,
            line: 22,
            column: 38,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 480,
            line: 22,
            column: 39,
        },
        Token {
            token_type: GT,
            position: 481,
            line: 22,
            column: 40,
        },
        Token {
            token_type: RightParen,
            position: 482,
            line: 22,
            column: 41,
        },
        Token {
            token_type: LeftBrace,
            position: 484,
            line: 22,
            column: 43,
        },
        Token {
            token_type: For,
            position: 490,
            line: 23,
            column: 6,
        },
        Token {
            token_type: LeftParen,
            position: 492,
            line: 23,
            column: 8,
        },
        Token {
            token_type: Identifier(
                "item",
            ),
            position: 496,
            line: 23,
            column: 12,
        },
        Token {
            token_type: In,
            position: 499,
            line: 23,
            column: 15,
        },
        Token {
            token_type: Identifier(
                "iter",
            ),
            position: 504,
            line: 23,
            column: 20,
        },
        Token {
            token_type: RightParen,
            position: 505,
            line: 23,
            column: 21,
        },
        Token {
            token_type: LeftBrace,
            position: 507,
            line: 23,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 517,
            line: 24,
            column: 10,
        },
        Token {
            token_type: LeftParen,
            position: 518,
            line: 24,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "item",
            ),
            position: 522,
            line: 24,
            column: 15,
        },
        Token {
            token_type: As,
            position: 525,
            line: 24,
            column: 18,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 529,
            line: 24,
            column: 22,
        },
        Token {
            token_type: RightParen,
            position: 530,
            line: 24,
            column: 23,
        },
        Token {
            token_type: Semicolon,
            position: 531,
            line: 24,
            column: 24,
        },
        Token {
            token_type: RightBrace,
            position: 535,
            line: 25,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 537,
            line: 26,
            column: 2,
        },
        Token {
            token_type: Function,
            position: 547,
            line: 28,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "main",
            ),
            position: 552,
            line: 28,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 553,
            line: 28,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 554,
            line: 28,
            column: 16,
        },
        Token {
            token_type: Colon,
            position: 555,
            line: 28,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 559,
            line: 28,
            column: 21,
        },
        Token {
            token_type: LeftBrace,
            position: 561,
            line: 28,
            column: 23,
        },
        Token {
            token_type: Var,
            position: 567,
            line: 29,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "r",
            ),
            position: 569,
            line: 29,
            column: 8,
        },
        Token {
            token_type: Eq,
            position: 571,
            line: 29,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "Range",
            ),
            position: 577,
            line: 29,
            column: 16,
        },
        Token {
            token_type: LeftBrace,
            position: 579,
            line: 29,
            column: 18,
        },
        Token {
            token_type: Identifier(
                "current",
            ),
            position: 587,
            line: 29,
            column: 26,
        },
        Token {
            token_type: Colon,
            position: 588,
            line: 29,
            column: 27,
        },
        Token {
            token_type: Int(
                "0",
            ),
            position: 590,
            line: 29,
            column: 29,
        },
        Token {
            token_type: Comma,
            position: 591,
            line: 29,
            column: 30,
        },
        Token {
            token_type: Identifier(
                "end",
            ),
            position: 595,
            line: 29,
            column: 34,
        },
        Token {
            token_type: Colon,
            position: 596,
            line: 29,
            column: 35,
        },
        Token {
            token_type: Int(
                "5",
            ),
            position: 598,
            line: 29,
            column: 37,
        },
        Token {
            token_type: RightBrace,
            position: 600,
            line: 29,
            column: 39,
        },
        Token {
            token_type: Semicolon,
            position: 601,
            line: 29,
            column: 40,
        },
        Token {
            token_type: Identifier(
                "print_all",
            ),
            position: 613,
            line: 30,
            column: 12,
        },
        Token {
            token_type: LT,
            position: 614,
            line: 30,
            column: 13,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 617,
            line: 30,
            column: 16,
        },
        Token {
            token_type: GT,
            position: 618,
            line: 30,
            column: 17,
        },
        Token {
            token_type: LeftParen,
            position: 619,
            line: 30,
            column: 18,
        },
        Token {
            token_type: Identifier(
                "r",
            ),
            position: 620,
            line: 30,
            column: 19,
        },
        Token {
            token_type: RightParen,
            position: 621,
            line: 30,
            column: 20,
        },
        Token {
            token_type: Semicolon,
            position: 622,
            line: 30,
            column: 21,
        },
        Token {
            token_type: Int(
                "0",
            ),
            position: 626,
            line: 31,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 628,
            line: 32,
            column: 2,
        },
    ],
)
